--- a/settings.ini
+++ b/settings.ini
@@ -1,2 +1,7 @@
 [SETTINGS]
 game directory = C:\Games\World of Warcraft
+
+[ELVUI]
+# Choose which version of Elvui you want to install by writing "True" or "False" behind the version
+classic = True
+retail = True
